# keydrop2

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  README.md  architecture.md  requirements.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/keydrop/: KeydropApplication.kt  MainActivity.kt
android/app/src/main/java/com/keydrop/autofill/: KeydropAutofillService.kt
android/app/src/main/java/com/keydrop/biometric/: BiometricManager.kt
android/app/src/main/java/com/keydrop/crypto/: CryptoManager.kt
android/app/src/main/java/com/keydrop/data/local/: VaultDatabase.kt
android/app/src/main/java/com/keydrop/data/local/dao/: SyncStateDao.kt  VaultItemDao.kt
android/app/src/main/java/com/keydrop/data/local/entity/: SyncStateEntity.kt  VaultItemEntity.kt
android/app/src/main/java/com/keydrop/data/model/: VaultItem.kt
android/app/src/main/java/com/keydrop/data/repository/: VaultRepository.kt
android/app/src/main/java/com/keydrop/di/: AppModule.kt  NetworkModule.kt
android/app/src/main/java/com/keydrop/sync/: BootReceiver.kt  SyncApiImpl.kt  SyncManager.kt  SyncWorker.kt
android/app/src/main/java/com/keydrop/ui/navigation/: NavHost.kt
android/app/src/main/java/com/keydrop/ui/screens/: DevicesScreen.kt  EmergencyAccessScreen.kt  ItemDetailScreen.kt  ItemEditScreen.kt  PasswordGeneratorScreen.kt  SettingsScreen.kt  UnlockScreen.kt  VaultListScreen.kt
android/app/src/main/java/com/keydrop/ui/theme/: Theme.kt
android/app/src/main/java/com/keydrop/ui/viewmodel/: AppViewModel.kt  DevicesViewModel.kt  EmergencyAccessViewModel.kt  ItemDetailViewModel.kt  ItemEditViewModel.kt  PasswordGeneratorViewModel.kt  SettingsViewModel.kt  UnlockViewModel.kt  VaultListViewModel.kt
android/app/src/main/java/com/keydrop/widget/: QuickAccessWidget.kt
android/app/src/main/res/layout/: autofill_item.xml  widget_preview.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: autofill_service_config.xml  data_extraction_rules.xml  widget_info.xml
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
backend/migrations/: 20240101000000_initial.sql  20240201000000_emergency_access.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: auth.rs  devices.rs  emergency.rs  mod.rs  sync.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/blob/: mod.rs
backend/src/db/: models.rs  queries.rs
backend/src/sync/: conflict.rs  mod.rs
backend/tests/: auth_test.rs  e2e_test.rs  emergency_test.rs  integration_test.rs  sync_test.rs
backend/tests/common/: mod.rs
crypto-core/: Cargo.toml
crypto-core/benches/: crypto_bench.rs
crypto-core/src/: cipher.rs  error.rs  kdf.rs  lib.rs  password.rs  vault.rs
crypto-core/uniffi/: Cargo.toml  build.rs
crypto-core/uniffi/src/: crypto_core.udl  lib.rs
crypto-core/wasm/: Cargo.toml
crypto-core/wasm/src/: lib.rs
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  storage.rs  sync.rs
desktop/src/components/: CredentialForm.tsx  DeviceManagement.tsx  EmergencyAccess.tsx  PasswordGenerator.tsx  SearchBar.tsx  SyncStatusIndicator.tsx  UnlockScreen.tsx  VaultList.tsx
desktop/src/hooks/: useSync.ts  useTauri.ts  useVault.ts
desktop/src/lib/: crypto.ts
extension/: manifest.json  package-lock.json  package.json  vite.config.ts
extension/src/background/: service-worker.ts
extension/src/content/: autofill.ts  content.css  content.ts  detector.ts
extension/src/lib/: crypto.ts  storage.ts
extension/src/popup/: Popup.tsx  popup.html
