[package]
name = "keydrop-backend"
version = "0.1.0"
edition = "2021"
description = "Keydrop password manager sync backend"

[lib]
name = "keydrop_backend"
path = "src/lib.rs"

[[bin]]
name = "keydrop-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database - PostgreSQL only (no sqlite to avoid conflicts with desktop app)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
headers = "0.4"
futures-util = "0.3"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# S3-compatible blob storage
aws-sdk-s3 = "1"
aws-config = "1"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14"
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"
