[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"
description = "Cryptographic core library for Keydrop password manager"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "crypto_bench"
harness = false
