[package]
name = "crypto-core-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for Keydrop crypto core"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crypto-core = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.4", features = ["js"] }
console_error_panic_hook = "0.1"
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
